added third game but still needs stylistic edites to match theme of last two games

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body{
 	background-image:url('https://wallpapers.com/downloads/high/pixel-background-dydt7w471f7t63js.webp');
 	background-repeat: no-repeat;
 	background-size: cover;
+	background-color: #231942;
 }
 
 ul {
