--- a/styles-game1.css
+++ b/styles-game1.css
@@ -50,15 +50,25 @@ h2{
 	0px 1px 2px black;
 }
 
-main{
-	display: flex;
-	justify-content: center;
-}
 
 canvas{
-	margin: 20px;
+	margin: 20px auto;
 	border-style: solid;
+	display:block;
+}
 
+section{
+	text-align: center;
+	border-style: solid;
+	border-radius: 25px;
+	margin: 10px 70px;
+	padding: 30px;
+	background-image: linear-gradient(#231942, #5e548e);
+	color: white;
+}
+
+p{
+	margin-top: 10px;
 }
 
 footer{
