--- a/styles-game3.css
+++ b/styles-game3.css
@@ -11,9 +11,6 @@ body{
 	background-color: #231942
 }
 
-canvas{
-	background-color: white;
-}
 
 a:link, a:visited{
 	color: white;
@@ -61,10 +58,25 @@ h2{
 }
 
 canvas{
+	background-color: white;
 	margin: 20px auto;
 	border-style: solid;
 	display: block;
 
+}
+
+section{
+	text-align: center;
+	border-style: solid;
+	border-radius: 25px;
+	margin: 10px 70px;
+	padding: 30px;
+	background-image: linear-gradient(#231842, #5e548e);
+	color: white;
+}
+
+p{
+	margin-top: 10px;
 }
 
 footer{
