--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,15 @@
   font-family: sans-serif, serif;
 }
 
-img{
-	background-color: white;
+img {
+  background-color: white;
 }
 
-body{
-	background-image:url('https://wallpapers.com/downloads/high/pixel-background-dydt7w471f7t63js.webp');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-color: #231942;
+body {
+  background-image: url("https://wallpapers.com/downloads/high/pixel-background-dydt7w471f7t63js.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #231942;
 }
 
 ul {
@@ -58,22 +58,22 @@ section {
   margin: 20px;
   text-align: center;
   background-color: black;
-  background-image: linear-gradient( #231942, #5e548e);
+  background-image: linear-gradient(#231942, #5e548e);
   padding: 10px;
 }
 
-section > a>img {
+section > a > img {
   width: 190px;
   height: 190px;
 }
 
 #verbal-overview > p {
-	padding-top: 5px;
+  padding-top: 5px;
 }
 
-#verbal-overview{
-	color: white;
-	padding: 5px;
+#verbal-overview {
+  color: white;
+  padding: 5px;
 }
 
 section:hover {
@@ -83,13 +83,14 @@ section:hover {
   opacity: 0.7;
 }
 
-a:link, a:visited{
-	text-decoration: none;
-	color: black;
+a:link,
+a:visited {
+  text-decoration: none;
+  color: black;
 }
 
-a:active>*{
-	opacity: .5;
+a:active > * {
+  opacity: 0.5;
 }
 
 footer {
@@ -97,7 +98,8 @@ footer {
   color: white;
 }
 
-footer>a:link, footer>a:visited{
-	text-decoration: underline;
-	color: white;
+footer > a:link,
+footer > a:visited {
+  text-decoration: underline;
+  color: white;
 }
