--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,8 @@ img {
 }
 
 body {
-  background-image: url("https://wallpapers.com/downloads/high/pixel-background-dydt7w471f7t63js.webp");
-  background-repeat: no-repeat;
+  background-color: #1f0e16;
   background-size: cover;
-  background-color: #231942;
 }
 
 ul {
@@ -27,7 +25,7 @@ ul {
 header {
   text-align: center;
   font-weight: bold;
-  background-color: black;
+  background-color:#fe8ab8;
   color: white;
   text-shadow:
 		/*x-offset, y-offset, radius, color*/
@@ -39,28 +37,33 @@ header {
 }
 
 main {
-  background-image: linear-gradient(#001233, #5e548e, #001233);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: url("https://wallpapers.com/downloads/high/pixel-background-dydt7w471f7t63js.webp");
   background-color: #3a506b;
-  border-radius: 25px;
   border-style: solid;
-  margin: 70px;
 }
 
-@media (min-width: 925px){
+@media (min-width: 1000px){
   main{
+	  border-radius: 25px;
 	  display: flex;
 	  justify-content: space-evenly;
-  }
-  section{
-	  margin: 20px;
+	  margin: 0px 10px;
+	  padding: 150px 10px;
   }
 }
 
-@media (max-width: 924px){
-	section{
-		display: block;
-		margin: 20px auto;
-	}
+@media (max-width: 999px){
+  main{
+	  background-position: center;
+	  margin: 0px 50px;
+  }
+  section{
+	  text-align: center;
+	  display: block;
+	  margin: 40px auto;
+  }
 }
 
 section {
@@ -71,7 +74,7 @@ section {
   border-radius: 10px;
   text-align: center;
   background-color: black;
-  background-image: linear-gradient(#231942, #5e548e);
+  background-image: linear-gradient(#fbf090, #ff6aa7);
   padding: 10px;
 }
 
@@ -85,7 +88,7 @@ section > a > img {
 }
 
 #verbal-overview {
-  color: white;
+  color: black;
   padding: 5px;
 }
 
