--- a/styles.css
+++ b/styles.css
@@ -37,27 +37,25 @@ header {
 }
 
 main {
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-image: url("https://wallpapers.com/downloads/high/pixel-background-dydt7w471f7t63js.webp");
   background-color: #3a506b;
-  border-style: solid;
 }
 
-@media (min-width: 1000px){
+@media (min-width: 1020px){
   main{
-	  border-radius: 25px;
 	  display: flex;
 	  justify-content: space-evenly;
-	  margin: 0px 10px;
-	  padding: 150px 10px;
+	  padding: 210px 35px;
   }
 }
 
-@media (max-width: 999px){
+@media (max-width: 1019px){
   main{
-	  background-position: center;
-	  margin: 0px 50px;
+	  margin: 0px 75px;
+	  padding: 40px 0px;;
   }
   section{
 	  text-align: center;
@@ -112,6 +110,7 @@ a:active > * {
 footer {
   text-align: center;
   color: white;
+  margin-top: 20px;
 }
 
 footer > a:link,
