--- a/game1/styles-game1.css
+++ b/game1/styles-game1.css
@@ -8,7 +8,7 @@ body {
   background-image: url("https://wallpapers.com/images/high/pixel-background-dydt7w471f7t63js.webp");
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #231942;
+  background-color: #1f0e16;
 }
 
 canvas {
@@ -28,7 +28,7 @@ a:active {
 header {
   text-align: center;
   font-weight: bold;
-  background-color: black;
+  background-color: #fe8ab8;
   color: white;
   text-shadow:
     -1px 0px 4px black,
@@ -62,8 +62,8 @@ section {
   border-radius: 25px;
   margin: 10px 70px;
   padding: 30px;
-  background-image: linear-gradient(#231942, #5e548e);
-  color: white;
+  background-image: linear-gradient(#fbf090, #ff6aa7);
+  color: black;
 }
 
 p {
