--- a/game2/styles-game2.css
+++ b/game2/styles-game2.css
@@ -28,7 +28,7 @@ a:active {
 header {
   text-align: center;
   font-weight: bold;
-  background-color: black;
+  background-color: #fe8ab8;
   color: white;
   text-shadow:
     -1px 0px 4px black,
@@ -63,8 +63,8 @@ section {
   border-radius: 25px;
   margin: 10px 70px;
   padding: 30px;
-  background-image: linear-gradient(#231942, #5e548e);
-  color: white;
+  background-image: linear-gradient(#fbf090, #ff6aa7);
+  color: black;
 }
 
 p {
